--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 [telegram]
-token = "6778234804:AAFhrIGz4Jk4wOntOkXX_mH2Ek3iS4mT_e0"
+token = ""
 
 [mongodb]
 server = "localhost"
@@ -7,6 +7,5 @@ port = 27017
 
 [server]
 address = "http://127.0.0.1:8000/"
-enabled = true
 host = "0.0.0.0"
 port = 8000
